@@ -155,3 +155,32 @@ def test_stack_tree(hlwm):
         - Window <windowid>
 '''
     assert strip_winids(stack.stdout) == expected_stack
+
+
+@pytest.mark.parametrize("focus_idx", range(0, 4))
+def test_tag_floating_state_on(hlwm, focus_idx):
+    win = hlwm.create_clients(5)
+    hlwm.attr.clients[win[4]].floating = 'on'
+    layout = f"""
+    (split vertical:0.5:0
+        (clients max:0 {win[0]} {win[1]})
+        (clients max:0 {win[2]} {win[3]}))
+    """.replace('\n', '')
+    hlwm.call(['load', layout])
+    hlwm.call(['jumpto', win[focus_idx]])
+
+    stack_before = helper_get_stack_as_list(hlwm)
+    assert stack_before[0] == win[4]  # the floating must be on top anyway
+
+    hlwm.call('floating on')
+
+    # the stack should start with the floating window and the focused window
+    stack_expected = [win[4], win[focus_idx]]
+    # then the remaining tiled clients should follow and their order remains the same
+    stack_expected += [winid for winid in stack_before if winid not in stack_expected]
+    assert helper_get_stack_as_list(hlwm) == stack_expected
+
+    # turning floating of, just restores the old stack because
+    # we didn't do any raising since
+    hlwm.call('floating off')
+    assert helper_get_stack_as_list(hlwm) == stack_before
