@@ -18,6 +18,7 @@ Current git version
       space between the panel and the monitor edge and also panels between two
       monitors.
     - Correctly handling minimized clients when removing a tag.
+    - Preserve stacking order when changing the floating state of a tag
   * New dependencies: xft, freetype
 
 Release 0.9.1 on 2020-12-28
